--- a/src/Components/Cart-Dropdown/cart-dropdown.styles.scss
+++ b/src/Components/Cart-Dropdown/cart-dropdown.styles.scss
@@ -1,7 +1,7 @@
 .cart-dropdown {
   position: absolute;
-  width: 240px;
-  height: 340px;
+  width: 280px;
+  height: 380px;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -11,8 +11,14 @@
   right: 40px;
   z-index: 5;
 
+  .empty-message{
+    font-size: 18px;
+    margin: 50px auto;
+    text-align: center;
+  }
+
   .cart-items {
-    height: 240px;
+    height: 280px;
     display: flex;
     flex-direction: column;
     overflow: scroll;
