--- a/src/Pages/checkout/checkout.styles.scss
+++ b/src/Pages/checkout/checkout.styles.scss
@@ -9,6 +9,7 @@
   .checkout-header {
     width: 100%;
     padding: 10px 0;
+    font-size: 20px;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
