--- a/src/Components/Header/header.styles.scss
+++ b/src/Components/Header/header.styles.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  z-index: 5;
 
   .logo-container {
     height: 100%;
@@ -13,7 +14,7 @@
 
   .options {
     font-size: 120%;
-    width: 50%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
