--- a/client/src/Components/Collection-item/collection-item.styles.scss
+++ b/client/src/Components/Collection-item/collection-item.styles.scss
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 42vh;
+  width: 22vw;
   display: flex;
   flex-direction: column;
   height: 350px;
@@ -47,6 +47,7 @@
 
     .price {
       width: 10%;
+      text-align: right;
     }
   }
 }
