--- a/client/src/Pages/collection/collection.styles.scss
+++ b/client/src/Pages/collection/collection.styles.scss
@@ -10,9 +10,14 @@
   .items {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-gap: 15px;
+
+    @media screen and(max-width: 800px){
+      grid-template-columns: 1fr 1fr;
+    }
 
     & .collection-item {
+      width: 100%;
       margin-bottom: 30px;
     }
   }
